--- a/src/app.html
+++ b/src/app.html
@@ -25,7 +25,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     %sveltekit.head%
 
     <!-- Google tag (gtag.js) -->
